bin_PROGRAMS = chain
chain_SOURCES = chain.c chain_expcos.c chain_spectral.c correlation.c \
	integration.c main.c mytime.c rnruni.c

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
chain_LDFLAGS = $(all_libraries) 
noinst_HEADERS = chain.h correlation.h integration.h mytime.h rnruni.h
